Make the code to run on self contain